AUTOMAKE_OPTIONS = foreign
SUBDIRS = src 
EXTRA_DIST = src/xpm xcode player_plugins icons usr debian ChangeLog KNOWN_BUGS src/FLTK/flgui.fl \
	     src/FLTK/Fl_My_Native_File_Chooser_MAC.mm src/FLTK/Fl_My_Native_File_Chooser_WIN32.cxx \
	     src/FLTK/Fl_My_Native_File_Chooser_FLTK.cxx src/FLTK/Fl_My_Native_File_Chooser_common.cxx

